--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@astrojs/react": "^3.0.3",
+    "@astrojs/tailwind": "^5.0.2",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
     "astro": "^3.3.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.3"
   }
 }
