--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@astrojs/react": "^3.0.3",
     "@astrojs/tailwind": "^5.0.2",
+    "@fontsource-variable/inter": "^5.0.13",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
     "astro": "^3.3.0",
