--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write **/*.astro ."
   },
   "dependencies": {
+    "@astrojs/mdx": "^1.1.2",
     "@astrojs/react": "^3.0.3",
     "@astrojs/tailwind": "^5.0.2",
     "@fontsource-variable/inter": "^5.0.13",
