--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/mdx": "^1.1.2",
     "@astrojs/react": "^3.0.3",
     "@astrojs/tailwind": "^5.0.2",
+    "@astrojs/vercel": "^5.0.2",
     "@fontsource-variable/inter": "^5.0.13",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
