--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
     "astro": "^3.3.0",
+    "highlight": "^0.2.4",
+    "lowlight": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rehype-highlight": "^7.0.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3"
   },
