--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource-variable/inter": "^5.0.13",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
+    "@vercel/speed-insights": "^1.0.12",
     "astro": "^4.0.8",
     "highlight": "^0.2.4",
     "lowlight": "^3.1.0",
