--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "dependencies": {
     "@astrojs/mdx": "^4.2.1",
     "@astrojs/react": "^4.2.1",
-    "@astrojs/tailwind": "^6.0.1",
     "@astrojs/vercel": "^8.1.3",
     "@fontsource-variable/inter": "^5.0.13",
+    "@tailwindcss/vite": "^4.0.15",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
     "@vercel/speed-insights": "^1.0.12",
@@ -26,11 +26,11 @@
     "react-dom": "^18.2.0",
     "rehype-highlight": "^7.0.0",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^4.0.15"
   },
   "devDependencies": {
     "prettier": "^3.0.3",
     "prettier-plugin-astro": "^0.12.0",
-    "prettier-plugin-tailwindcss": "^0.5.6"
+    "prettier-plugin-tailwindcss": "^0.6.11"
   }
 }
